fix: remove gap between price and button in the product block slider

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -203,7 +203,6 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 1.3rem;
         margin-top: auto;
 
         @include small-tablet{
@@ -253,7 +252,6 @@
         &-button {
             display: flex;
             align-items: center;
-            justify-content: space-between;
             padding: 1.25rem 2.6rem;
 
 
